# sangre-signal

./: .containerignore  .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  COPR_SETUP.md  Containerfile  DEPLOYMENT_QUICKSTART.md  PYPI_DEPLOYMENT.md  README.md  RPM_PACKAGING.md  pyproject.toml  requirements.txt  sangre-signal.bat  sangre-signal.spec
sangre_signal/: __main__.py  cache.py  cli.py  config.py  main.py
sangre_signal/analyzers/: risk_analyzer.py
sangre_signal/fetchers/: finviz.py  yahoo_finance.py
sangre_signal/formatters/: __init__.py  base.py  claude_formatter.py  perplexity_formatter.py
super_signal/: cache.py  cli.py  config.py  main.py
super_signal/fetchers/: finviz.py  yahoo_finance.py
super_signal/formatters/: __init__.py  base.py  claude_formatter.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_display.py  test_finviz.py  test_formatters.py  test_models.py  test_risk_analyzer.py  test_yahoo_finance.py
