[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sangre-signal"
version = "1.0.0"
description = "Sangre Signal - Advanced stock analysis tool with Claude AI-powered risk explanations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TradingAsBuddies"}
]
keywords = ["stocks", "finance", "screening", "risk-analysis", "yahoo-finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "yfinance>=1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tzdata>=2023.3",
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/TradingAsBuddies/sangre-signal"
Repository = "https://github.com/TradingAsBuddies/sangre-signal"
Issues = "https://github.com/TradingAsBuddies/sangre-signal/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "mypy>=1.4.0",
    "ruff>=0.0.285",
]

[project.scripts]
sangre-signal = "sangre_signal.main:main"

[tool.setuptools.packages.find]
include = ["sangre_signal*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 88
target-version = "py310"
